but the preliminary answer is NO -- the browser freezes and the plot
does not respond to mouse clicks while the data is loading.

DSL: Implement shape aesthetic with d3.svg.symbol()
https://github.com/mbostock/d3/wiki/SVG-Shapes#symbol_type

RENDER: Determine why border of tiles in pirates example does not seem to be rendering.

2015.10.26

DATA: PredictedPeaks and test-renderer2-PredictedPeaks.R

BUGFIX: do not call update_selector twice from selectize widgets,
since we are now using setValue(values, true).

DSL: selectize option list for determining which selector widgets to
render. By default do not render a widget if there are more than 1000
values.

2015.10.18

GGPLOT: aes(hjust) support for values 0, 0.5, 1 (error for other
values). geom_text(vjust) or aes(vjust) raises warning if values other
than 0.5 are specified.

RENDERER: do not show selector widgets for selectors that were created
with .variable .value aesthetics.

RENDERER: play() only after loading all animation chunks.

BUGFIX: common/varied chunk code properly handles the example in
test-renderer2-VariantModels.R.

2015.09.28

BUGFIX: common/varied chunk code properly handles the example in
test-PeakConsistency.R -- no nest columns in common data, and each
group of common data must have either 1 or N data, where N is the
number of rows in each varied chunk.

2015.09.25

BUGFIX: multiple animints can be rendered in the same Rmd, and each
animint does not affect any of the others.

2015.09.23

BUGFIX: tooltips render for geoms with clickSelects.variable/value.

2015.09.22

BUGFIX: geom_hline is now rendered properly. Test includes with and
without the data= argument.

2015.09.18

BUGFIX: geom_line was not rendering properly when the x values were
not saved in increasing order in the tsv files. Fixed by sorting
before saving.

2015.09.17

OPTIMIZATION: the compiler will not save any geom1_chunk123.tsv files
less than 4KB, unless specifically asked to do so using chunk_vars.
